--- a/src/components/Books/books.css
+++ b/src/components/Books/books.css
@@ -9,6 +9,7 @@
 }
 
 .book-cover {
+  background-image: url('../../../public/images/sadbook-4.png');
   margin-top    : 20px;
   margin-bottom : 10px;
   margin-right  : auto;
